# scam

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt  accessors.cc  assert.cc  assert.hh  defun.cc  eval.cc  general.cc  parse.cc  predicates.cc  scam.hh  scm.cc  scm.hh  show.cc  values.cc  wrappers.cc
test/: CMakeLists.txt  cons_tests.cc  parse_tests.cc  show_tests.cc  wrap_tests.cc
